line breaks on end page fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,8 +42,7 @@
     z-index: 1;
 }
 #answers {
-    font-size:30px;
-    
+    font-size:30px
 }
 #timer {
     margin-top:20px;
